Redo the way we handle .l and .y files.
Use AC_PROG_LEX and AC_PROG_YACC to find {f}lex and yacc/bison/byacc.
Once we've found them, make sure {f}lex can handle -P, --header-file,
--nounput, and -o, and can parse our scanner.l, and make sure
yacc/bison/byacc can handle -p and -o.  If that fails, fail, suggesting
that the user get versions that can (such as Flex and Bison/Berkeley
YACC).  If that doesn't fail, use those options; don't use runlex.sh.

--- a/Makefile.in
+++ b/Makefile.in
@@ -69,13 +69,8 @@ INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_DATA = @INSTALL_DATA@
 RANLIB = @RANLIB@
 
-#
-# Flex and bison allow you to specify the prefixes of the global symbols
-# used by the generated parser.  This allows programs to use lex/yacc
-# and link against libpcap.  If you don't have flex or bison, get them.
-#
-LEX = @V_LEX@
-YACC = @V_YACC@
+LEX = @LEX@
+YACC = @YACC@
 
 # Explicitly define compilation rule since SunOS 4's make doesn't like gcc.
 # Also, gcc does not remove the .o before forking 'as', which can be a
@@ -149,7 +144,7 @@ TESTS_SRC = \
 	tests/valgrindtest.c
 
 GENHDR = \
-	scanner.h tokdefs.h version.h
+	scanner.h grammar.h version.h
 
 TAGFILES = \
 	$(SRC) $(HDR)
@@ -337,7 +332,6 @@ EXTRA_DIST = \
 	pcap-usb-linux.c \
 	pcap-usb-linux.h \
 	pcap-win32.c \
-	runlex.sh \
 	scanner.l \
 	Win32/Include/Gnuc.h \
 	Win32/Include/net/if.h \
@@ -429,21 +423,18 @@ libpcap.shareda: $(OBJ)
 #
 libpcap.none:
 
+scanner.h: scanner.c
 scanner.c: $(srcdir)/scanner.l
-	@rm -f $@
-	$(srcdir)/runlex.sh $(LEX) -o$@ $<
+	$(LEX) -P pcap_ --header-file=scanner.h --nounput -o scanner.c $<
 
-scanner.o: scanner.c tokdefs.h
+scanner.o: scanner.c grammar.h
 	$(CC) $(FULL_CFLAGS) -c scanner.c
 
 pcap.o: version.h
 
-tokdefs.h: grammar.c
+grammar.h: grammar.c
 grammar.c: $(srcdir)/grammar.y
-	@rm -f grammar.c tokdefs.h
-	$(YACC) -d $<
-	mv y.tab.c grammar.c
-	mv y.tab.h tokdefs.h
+	$(YACC) -p pcap_ -o grammar.c -d $<
 
 grammar.o: grammar.c
 	@rm -f $@
