Clean up CMake stuff to start to work on UN*X.
Create a config.h file from cmakeconfig.h.in using configure_file().

Don't do all the static/dynamic runtime stuff unless we're using MSVC.

Use CMake's standard commands for checking for header files, library
routines, data types, and structure members.

Define INET6, not USE_IPV6, if we're going to support IPv6.

Generate grammar.{c,h} and scanner.{c,h} using {F}lex and
YACC/Bison/Berkeley YACC.

On UN*X, check what capture mechanism and mechanism for finding devices
we have, and build the appropriate pcap-XXX.c and fad-YYY.c files.

Only use missing/snprintf.c if we don't have snprintf.

Include all the CMake stuff into the release tarball built with
autotools.

--- a/Makefile.in
+++ b/Makefile.in
@@ -230,6 +230,7 @@ EXTRA_DIST = \
 	ChmodBPF/ChmodBPF \
 	ChmodBPF/StartupParameters.plist \
 	CREDITS \
+	CMakeLists.txt \
 	INSTALL.txt \
 	LICENSE \
 	Makefile.in \
@@ -252,6 +253,8 @@ EXTRA_DIST = \
 	aclocal.m4 \
 	bpf/net/bpf_filter.c \
 	chmod_bpf \
+	cmakeconfig.h.in \
+	config/have_siocglifconf.c \
 	config.guess \
 	config.h.in \
 	config.sub \
