--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ include_directories(
 if( WIN32 )
     if( NOT "${PACKET_DLL_DIR}" STREQUAL "" )
         include_directories("${PACKET_DLL_DIR}/Include")
+        link_directories("${PACKET_DLL_DIR}/Lib")
     endif()
     include_directories(
         ../Common/
