Add a "getopt.h" header and include it instead of <unistd.h> on Windows.
We include <unistd.h> for getopt(), but, on Windows, we supply our own
getopt() (as it's a UN*X API), so supply our own header and include that
instead.

While we're at it, mark the copyright strings as unused (to squelch
compiler warnings), and don't include the headers for select() or poll()
in capturetest.c, as we don't use those APIs there (that's what
selpolltest(), which is UN*X-only, is for).  <unistd.h> or "getopt.h"
should declare the getopt() external variables, so don't declare them
ourselves.

--- a/Makefile.in
+++ b/Makefile.in
@@ -278,6 +278,7 @@ EXTRA_DIST = \
 	lbl/os-sunos4.h \
 	lbl/os-ultrix4.h \
 	missing/getopt.c \
+	missing/getopt.h \
 	missing/snprintf.c \
 	mkdep \
 	msdos/bin2c.c \
