Fix test programs to build on more platforms.
Add a bunch of compiler checks to define various macros for attributes
to be assigned to functions and variables.

The Single UNIX Specification says inet_addr() returns (in_addr_t)(-1)
on an error; check for that, as INADDR_NONE isn't defined on all UN*Xes.
(Microsoft's documentation says inet_addr() returns INADDR_NONE, but
that's probably just -1 or 0xffffffff.)

Check whether we have sys/select.h and, if we don't, include sys/time.h
instead; some older UN*Xes don't have sys/select.h.

Get rid of some unused #defines in Win32/Include/Gnuc.h.

--- a/config.h.in
+++ b/config.h.in
@@ -184,6 +184,9 @@
 /* Define to 1 if you have the <sys/ioccom.h> header file. */
 #undef HAVE_SYS_IOCCOM_H
 
+/* Define to 1 if you have the <sys/select.h> header file. */
+#undef HAVE_SYS_SELECT_H
+
 /* Define to 1 if you have the <sys/sockio.h> header file. */
 #undef HAVE_SYS_SOCKIO_H
 
