Explicitly indicate that gencode.c depends on grammar.h and scanner.h.
That makes sure that we generate those headers before trying to build
gencode.o.

--- a/Makefile.in
+++ b/Makefile.in
@@ -443,6 +443,9 @@ grammar.c: $(srcdir)/grammar.y
 grammar.o: grammar.c
 	$(CC) $(FULL_CFLAGS) -c grammar.c
 
+gencode.o: $(srcdir)/gencode.c grammar.h scanner.h
+	$(CC) $(FULL_CFLAGS) -c $(srcdir)/gencode.c
+
 version.o: version.c
 	$(CC) $(FULL_CFLAGS) -c version.c
 
