--- a/Makefile.in
+++ b/Makefile.in
@@ -448,8 +448,7 @@ grammar.o: grammar.c
 # are failing.
 #
 gencode.o: $(srcdir)/gencode.c grammar.h scanner.h
-	@echo "scanner.h, line 319:"
-	-sed -n 319p scanner.h
+	-egrep 'yyscanner|yyscan_t' scanner.h
 	$(CC) $(FULL_CFLAGS) -c $(srcdir)/gencode.c
 
 version.o: version.c
