--- a/Makefile.in
+++ b/Makefile.in
@@ -448,7 +448,7 @@ grammar.o: grammar.c
 # are failing.
 #
 gencode.o: $(srcdir)/gencode.c grammar.h scanner.h
-	-egrep 'yyscanner|yyscan_t' scanner.h
+	-sed -n '300,350p' scanner.h
 	$(CC) $(FULL_CFLAGS) -c $(srcdir)/gencode.c
 
 version.o: version.c
