Only build valgrindtest if we have BPF or Linux.
It should really be "if we have BPF or have Linux with PF_PACKET sockets
and socket filters", but I'm too lazy to get that specific; if somebody
actually complains that "make tests" fails on such a system (for which
read "system with a really really old kernel or a really really old GNU
libc), I'll add in the necessary checks.

--- a/Makefile.in
+++ b/Makefile.in
@@ -125,23 +125,23 @@ HDR = $(PUBHDR) \
 	sunatmpos.h
 
 TESTS = \
+	@VALGRINDTEST@ \
 	capturetest \
 	can_set_rfmon_test \
 	filtertest \
 	findalldevstest \
 	opentest \
-	selpolltest \
-	valgrindtest
+	selpolltest
 
 TESTS_SRC = \
+	tests/valgrindtest.c \
 	tests/capturetest.c \
 	tests/can_set_rfmon_test.c \
 	tests/filtertest.c \
 	tests/findalldevstest.c \
 	tests/opentest.c \
 	tests/reactivatetest.c \
-	tests/selpolltest.c \
-	tests/valgrindtest.c
+	tests/selpolltest.c
 
 GENHDR = \
 	scanner.h grammar.h version.h
