Move the .def file to the top-level source directory.
We'll be generating files for UN*X builds from it, so don't hide it
under Win32.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ if( WIN32 )
     # Use module file from project directory if none was specified
     #
     if ("${PCAP_DEF_FILE}" STREQUAL "")
-        set( PCAP_DEF_FILE "${pcap_SOURCE_DIR}/Win32/Prj/${PROJECT_NAME}.def")
+        set( PCAP_DEF_FILE "${pcap_SOURCE_DIR}/${PROJECT_NAME}.def")
     endif( )
 endif( WIN32)
 
