BUILDING_LIBPCAP -> BUILDING_PCAP.
So nobody thinks it means "building libpcap, as opposed to building
WinPcap", and therefore that it should *not* be defined when building
for Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ if( WIN32 )
     )
 endif( WIN32)
 
-add_definitions( -DBUILDING_LIBPCAP )
+add_definitions( -DBUILDING_PCAP )
 
 if( MSVC )
     add_definitions( -D__STDC__ )
