Split out the UN*X flags to pcap flags mapping.
Add an if_flags_to_pcap_flags() routine to map the interface name (if
necessary) and IFF_ flags to PCAP_IF_ flags, and call that in the
platform-specific routines.  That means that the calls to add to the
interface list don't need to use IFF_ flags, which are UN*Xisms.

Move the routines that update the interface list to fad-helpers.c,
leaving just the legacy APIs in inet.c.

Update finalldevstest to print out all the flags.

--- a/Makefile.in
+++ b/Makefile.in
@@ -82,8 +82,8 @@ YACC = @YACC@
 PSRC =	pcap-@V_PCAP@.c @USB_SRC@ @BT_SRC@ @BT_MONITOR_SRC@ @CAN_SRC@ @NETFILTER_SRC@ @CANUSB_SRC@ @DBUS_SRC@
 FSRC =  fad-@V_FINDALLDEVS@.c
 SSRC =  @SSRC@
-CSRC =	pcap.c inet.c gencode.c optimize.c nametoaddr.c etherent.c \
-	savefile.c sf-pcap.c sf-pcap-ng.c pcap-common.c \
+CSRC =	pcap.c inet.c fad-helpers.c gencode.c optimize.c nametoaddr.c \
+	etherent.c savefile.c sf-pcap.c sf-pcap-ng.c pcap-common.c \
 	bpf_image.c bpf_dump.c
 GENSRC = scanner.c grammar.c bpf_filter.c version.c
 LIBOBJS = @LIBOBJS@
@@ -267,6 +267,7 @@ EXTRA_DIST = \
 	fad-getad.c \
 	fad-gifc.c \
 	fad-glifc.c \
+	fad-helpers.c \
 	fad-null.c \
 	fad-sita.c \
 	fad-win32.c \
