Add missing files, build dynamic libraries.

--- a/Win32/Prj/libpcap.vcxproj.filters
+++ b/Win32/Prj/libpcap.vcxproj.filters
@@ -46,6 +46,18 @@
     <ClCompile Include="..\..\scanner.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\sf-pcap.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\sf-pcap-ng.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\pcap-common.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\fad-helpers.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
@@ -57,6 +69,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\pcap-tc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\pcap-stdinc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\pcap-common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\pcap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
