Have pcap_platform_finddevs() do all the "find local interfaces" work.
Rename pcap_findalldevs_interfaces() to pcap_platform_finddevs(), now
that pcap_findalldevs() calls pcap_platform_finddevs() to find *all* the
local interfaces.  Move it from fad-sita.c to pcap-sita.c, and get rid
of fad-sita.c.

Update INSTALL.txt to reflect the disappearance of fad-sita.c and
fad-win32.c.

--- a/Makefile.in
+++ b/Makefile.in
@@ -80,7 +80,7 @@ YACC = @YACC@
 	$(CC) $(FULL_CFLAGS) -c $(srcdir)/$*.c
 
 PSRC =	pcap-@V_PCAP@.c @USB_SRC@ @BT_SRC@ @BT_MONITOR_SRC@ @CAN_SRC@ @NETFILTER_SRC@ @CANUSB_SRC@ @DBUS_SRC@
-FSRC =  fad-@V_FINDALLDEVS@.c
+FSRC =  @V_FINDALLDEVS@
 SSRC =  @SSRC@
 CSRC =	pcap.c inet.c fad-helpers.c gencode.c optimize.c nametoaddr.c \
 	etherent.c savefile.c sf-pcap.c sf-pcap-ng.c pcap-common.c \
@@ -269,7 +269,6 @@ EXTRA_DIST = \
 	fad-glifc.c \
 	fad-helpers.c \
 	fad-null.c \
-	fad-sita.c \
 	grammar.y \
 	install-sh \
 	lbl/os-aix4.h \
