HAVE_SNPRINTF is defined only for versions of MSVC that have provided snprintf().

--- a/Win32/Prj/libpcap.vcxproj.filters
+++ b/Win32/Prj/libpcap.vcxproj.filters
@@ -55,6 +55,7 @@
     <ClCompile Include="..\..\fad-helpers.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\missing\win_snprintf.c" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
