--- a/cmakeconfig.h.in
+++ b/cmakeconfig.h.in
@@ -208,6 +208,9 @@
 /* Define to 1 if you have the `vsnprintf' function. */
 #cmakedefine HAVE_VSNPRINTF 1
 
+/* Define to 1 if you have the `PacketIsLoopbackAdapter' function. */
+#cmakedefine HAVE_PACKET_IS_LOOPBACK_ADAPTER 1
+
 /* define if the system supports zerocopy BPF */
 #cmakedefine HAVE_ZEROCOPY_BPF 1
 
