--- a/configure.in
+++ b/configure.in
@@ -595,15 +595,30 @@ bpf)
 	;;
 
 dag)
+	#
+	# --with-pcap=dag is the only way to get here, and it means
+	# "DAG support but nothing else"
+	#
 	V_DEFS="$V_DEFS -DDAG_ONLY"
+	xxx_only=yes
 	;;
 
 septel)
+	#
+	# --with-pcap=septel is the only way to get here, and it means
+	# "Septel support but nothing else"
+	#
 	V_DEFS="$V_DEFS -DSEPTEL_ONLY"
+	xxx_only=yes
 	;;
 
 snf)
+	#
+	# --with-pcap=snf is the only way to get here, and it means
+	# "SNF support but nothing else"
+	#
 	V_DEFS="$V_DEFS -DSNF_ONLY"
+	xxx_only=yes
 	;;
 
 null)
@@ -758,6 +773,10 @@ AC_HELP_STRING([--with-dag@<:@=DIR@:>@],[include Endace DAG support (located in 
 		# User requested DAG-only libpcap, so we'd better have
 		# the DAG API.
 		want_dag=yes
+	elif test "xxx_only" = yes; then
+		# User requested something-else-only pcap, so they don't
+		# want DAG support.
+		want_dag=no
 	else
 		#
 		# Use DAG API if present, otherwise don't
@@ -878,6 +897,10 @@ AC_HELP_STRING([--with-septel@<:@=DIR@:>@],[include Septel support (located in d
 		# User requested Septel-only libpcap, so we'd better have
 		# the Septel API.
 		want_septel=yes
+	elif test "xxx_only" = yes; then
+		# User requested something-else-only pcap, so they don't
+		# want Septel support.
+		want_septel=no
 	else
 		#
 		# Use Septel API if present, otherwise don't
@@ -953,6 +976,10 @@ AC_HELP_STRING([--with-snf@<:@=DIR@:>@],[include Myricom SNF support (located in
 		# User requested Sniffer-only libpcap, so we'd better have
 		# the Sniffer API.
 		want_snf=yes
+	elif test "xxx_only" = yes; then
+		# User requested something-else-only pcap, so they don't
+		# want SNF support.
+		want_snf=no
 	else
 		#
 		# Use Sniffer API if present, otherwise don't
@@ -1051,10 +1078,16 @@ AC_HELP_STRING([--with-turbocap@<:@=DIR@:>@],[include Riverbed TurboCap support 
 		turbocap_root=$withval
 	fi
 ],[
-	#
-	# Use TurboCap API if present, otherwise don't
-	#
-	want_turbocap=ifpresent
+	if test "xxx_only" = yes; then
+		# User requested something-else-only pcap, so they don't
+		# want TurboCap support.
+		want_turbocap=no
+	else
+		#
+		# Use TurboCap API if present, otherwise don't
+		#
+		want_turbocap=ifpresent
+	fi
 ])
 
 ac_cv_lbl_turbocap_api=no
@@ -1444,6 +1477,12 @@ AC_ARG_ENABLE([usb],
     [],
     [enable_usb=yes])
 
+if test "xxx_only" = yes; then
+	# User requested something-else-only pcap, so they don't
+	# want USB support.
+	enable_usb=no
+fi
+
 if test "x$enable_usb" != "xno" ; then
    dnl check for USB sniffing support
    AC_MSG_CHECKING(for USB sniffing support)
@@ -1516,21 +1555,22 @@ AC_SUBST(PCAP_SUPPORT_USB)
 AC_SUBST(USB_SRC)
 
 dnl check for netfilter sniffing support
-AC_MSG_CHECKING(whether the platform could support netfilter sniffing)
-case "$host_os" in
-linux*)
-	AC_MSG_RESULT(yes)
-	#
-	# Life's too short to deal with trying to get this to compile
-	# if you don't get the right types defined with
-	# __KERNEL_STRICT_NAMES getting defined by some other include.
-	#
-	# Check whether the includes Just Work.  If not, don't turn on
-	# netfilter support.
-	#
-	AC_MSG_CHECKING(whether we can compile the netfilter support)
-	AC_CACHE_VAL(ac_cv_netfilter_can_compile,
-	  AC_TRY_COMPILE([
+if test "xxx_only" != yes; then
+	AC_MSG_CHECKING(whether the platform could support netfilter sniffing)
+	case "$host_os" in
+	linux*)
+		AC_MSG_RESULT(yes)
+		#
+		# Life's too short to deal with trying to get this to compile
+		# if you don't get the right types defined with
+		# __KERNEL_STRICT_NAMES getting defined by some other include.
+		#
+		# Check whether the includes Just Work.  If not, don't turn on
+		# netfilter support.
+		#
+		AC_MSG_CHECKING(whether we can compile the netfilter support)
+		AC_CACHE_VAL(ac_cv_netfilter_can_compile,
+		  AC_TRY_COMPILE([
 AC_INCLUDES_DEFAULT
 #include <sys/socket.h>
 #include <netinet/in.h>
@@ -1544,17 +1584,18 @@ AC_INCLUDES_DEFAULT
 	    [],
 	    ac_cv_netfilter_can_compile=yes,
 	    ac_cv_netfilter_can_compile=no))
-	AC_MSG_RESULT($ac_cv_netfilter_can_compile)
-	if test $ac_cv_netfilter_can_compile = yes ; then
-	  AC_DEFINE(PCAP_SUPPORT_NETFILTER, 1,
-	    [target host supports netfilter sniffing])
-	  NETFILTER_SRC=pcap-netfilter-linux.c
-	fi
-	;;
-*)
-	AC_MSG_RESULT(no)
-	;;
-esac
+		AC_MSG_RESULT($ac_cv_netfilter_can_compile)
+		if test $ac_cv_netfilter_can_compile = yes ; then
+		  AC_DEFINE(PCAP_SUPPORT_NETFILTER, 1,
+		    [target host supports netfilter sniffing])
+		  NETFILTER_SRC=pcap-netfilter-linux.c
+		fi
+		;;
+	*)
+		AC_MSG_RESULT(no)
+		;;
+	esac
+fi
 AC_SUBST(PCAP_SUPPORT_NETFILTER)
 AC_SUBST(NETFILTER_SRC)
 
@@ -1562,6 +1603,12 @@ AC_ARG_ENABLE([bluetooth],
 [AC_HELP_STRING([--enable-bluetooth],[enable Bluetooth support @<:@default=yes, if support available@:>@])],
     [],
     [enable_bluetooth=ifsupportavailable])
+
+if test "xxx_only" = yes; then
+	# User requested something-else-only pcap, so they don't
+	# want Bluetooth support.
+	enable_bluetooth=no
+fi
 
 if test "x$enable_bluetooth" != "xno" ; then
 	dnl check for Bluetooth sniffing support
@@ -1642,6 +1689,12 @@ AC_ARG_ENABLE([canusb],
     [],
     [enable_canusb=ifsupportavailable])
 
+if test "xxx_only" = yes; then
+	# User requested something-else-only pcap, so they don't
+	# want canusb support.
+	enable_canusb=no
+fi
+
 if test "x$enable_canusb" != "xno" ; then
 	dnl check for canusb support
 	case "$host_os" in
@@ -1688,6 +1741,12 @@ AC_ARG_ENABLE([can],
     [],
     [enable_can=ifsupportavailable])
 
+if test "xxx_only" = yes; then
+	# User requested something-else-only pcap, so they don't
+	# want CAN support.
+	enable_can=no
+fi
+
 if test "x$enable_can" != "xno" ; then
 	dnl check for CAN sniffing support
 	case "$host_os" in
@@ -1724,6 +1783,12 @@ AC_ARG_ENABLE([dbus],
 [AC_HELP_STRING([--enable-dbus],[enable D-Bus capture support @<:@default=yes, if support available@:>@])],
     [],
     [enable_dbus=ifavailable])
+
+if test "xxx_only" = yes; then
+	# User requested something-else-only pcap, so they don't
+	# want D-Bus support.
+	enable_dbus=no
+fi
 
 if test "x$enable_dbus" != "xno"; then
 	if test "x$enable_dbus" = "xyes"; then
