--- a/Win32/Prj/wpcap.vcxproj
+++ b/Win32/Prj/wpcap.vcxproj
@@ -215,7 +215,7 @@ win_bison -ppcap_ --yacc --output=..\..\grammar.c --defines ..\..\grammar.y</Com
     <ClCompile Include="..\..\optimize.c" />
     <ClCompile Include="..\..\pcap-common.c" />
     <ClCompile Include="..\..\pcap-new.c" />
-    <ClCompile Include="..\..\pcap-remote.c" />
+    <ClCompile Include="..\..\pcap-rpcap.c" />
     <ClCompile Include="..\..\pcap-win32.c" />
     <ClCompile Include="..\..\pcap.c" />
     <ClCompile Include="..\..\savefile.c" />
@@ -227,7 +227,7 @@ win_bison -ppcap_ --yacc --output=..\..\grammar.c --defines ..\..\grammar.y</Com
   <ItemGroup>
     <ClInclude Include="..\..\pcap-common.h" />
     <ClInclude Include="..\..\pcap-int.h" />
-    <ClInclude Include="..\..\pcap-remote.h" />
+    <ClInclude Include="..\..\pcap-rpcap.h" />
     <ClInclude Include="..\..\pcap-stdinc.h" />
     <ClInclude Include="..\..\pcap.h" />
     <ClInclude Include="..\..\remote-ext.h" />
