Fix typo in comment.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ if( WIN32 )
 endif( WIN32 )
 
 ######################################
-# Project setings
+# Project settings
 ######################################
 
 add_definitions( -DHAVE_CONFIG_H )
