Add a wrapper for strtok_r().
Have a pcap_strtok_r(), which behaves like the standard UNIX strtok_r().

If we have strtok_r(), pcap_strtok_r is just #defined to be strtok_r.

If we're building with MSVC, pcap_strtok_r is just #defined to be
strtok_s.

Otherwise, we build our own, taken from FreeBSD.

Use it in sockutils.c, to avoid warnings and to make sure it's
thread-safe (the Single UNIX Specification does not guarantee that
strtok() is thread-safe - it could, but it isn't required to, use
thread-local storage for the state).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,7 @@ check_function_exists( strerror HAVE_STRERROR )
 check_function_exists( strlcpy HAVE_STRLCPY )
 check_function_exists( snprintf HAVE_SNPRINTF )
 check_function_exists( vsnprintf HAVE_VSNPRINTF )
+check_function_exists( strtok_r HAVE_STRTOK_R )
 
 if (WIN32)
     #
@@ -197,6 +198,9 @@ else()
     if( NOT HAVE_SNPRINTF )
         set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} missing/snprintf.c )
     endif( NOT HAVE_SNPRINTF )
+    if( NOT HAVE_STRTOK_R )
+        set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} missing/strtok_r.c )
+    endif( NOT HAVE_STRTOK_R )
 endif( WIN32 )
 
 if( HAVE_REMOTE )
